<resources>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera_once">"Can't connect to camera."</string>
    <string name="cannot_connect_camera_twice">"Still can't connect to camera. Try restarting your phone and see if the problem persists."</string>
    <string name="camera_disabled">Camera has been disabled.</string>
    <string name="camera_label">Camera</string>
    <string name="video_camera_label">Video camera</string>
    <string name="wait">Please wait…</string>
    <string name="no_storage">Insert an SD card before using the camera.</string>
    <string name="not_enough_space">Your internal storage is full.</string>
    <string name="preparing_sd">Preparing internal storage…</string>
    <string name="access_sd_fail">"Couldn't access USB storage."</string>
    <string name="confirm_restore_title">Restore default settings</string>
    <string name="confirm_restore_message">Restore Camera default settings?</string>
    <string name="confirm_change_mode_title">Switch mode?</string>
    <string name="confirm_change_to_expert_mode_message">Switch to professional mode.</string>
    <string name="confirm_change_to_simple_mode_message">Switch to simple mode.</string>
    <string name="confirm_location_message">Store location information in photos?</string>
    <string name="save">Store</string>
    <string name="no_save">"Don't store"</string>
    <string name="review_cancel">CANCEL</string>
    <string name="pref_camera_id_title">Select camera</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_recordlocation_title">Store location info in photos</string>
    <string name="pref_camera_recordlocation_default">false</string>
    <string name="pref_camera_recordlocation_entry_off">Off</string>
    <string name="pref_camera_recordlocation_entry_on">On</string>
    <string name="pref_camera_sound_title">Camera sounds</string>
    <string name="pref_camera_sound_default">on</string>
    <string name="pref_camera_sound_title_entry_off">Off</string>
    <string name="pref_camera_sound_title_entry_on">On</string>
    <string name="pref_camera_sound_entry_off">Off</string>
    <string name="pref_camera_sound_entry_on">On</string>
    <string name="pref_camera_auto_focus_title_entry_off">Off</string>
    <string name="pref_camera_auto_focus_title_entry_on">On</string>
    <string name="pref_captrue_mirror_title">Front camera</string>
    <string name="pref_captrue_mirror_entry_off">Off</string>
    <string name="pref_captrue_mirror_entry_on">On</string>
    <string name="pref_captrue_mirror_default">off</string>
    <string name="pref_captrue_mirror_value_off">off</string>
    <string name="pref_captrue_mirror_value_on">on</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_default">5</string>
    <string name="pref_video_quality_entry_1080p">FULL HD</string>
    <string name="pref_video_quality_entry_720p">HD</string>
    <string name="pref_video_quality_entry_480p">SD</string>
    <string name="pref_video_quality_entry_fwvga">FWVGA</string>
    <string name="pref_video_quality_entry_wvga">WVGA</string>
    <string name="pref_video_quality_entry_vga">VGA</string>
    <string name="pref_video_quality_entry_wqvga">WQVGA</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse interval</string>
    <string name="pref_video_time_lapse_frame_interval_default">120</string>
    <string name="pref_video_time_lapse_frame_interval_entry_2">Interval of 0.06 seconds(2 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_4">Interval of 0.12 seconds(4 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_10">Interval of 0.3 seconds(10 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_30">Interval of 1 second(30 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_60">Interval of 2 seconds(60 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_90">Interval of 3 seconds(90 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_120">Interval of 4 seconds(120 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_150">Interval of 5 seconds(150 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_240">Interval of 8 seconds(240 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_300">Interval of 10 seconds(300 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_450">Interval of 15 seconds(450 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_900">Interval of 30 seconds(900 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_1800">Interval of 60 seconds(1800 times)</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camera settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_title_simple_mode">Camera frame</string>
    <string name="pref_camera_picturesize_entry_4208x3120">Standard 4:3</string>
    <string name="pref_camera_picturesize_entry_4208x2368">Full screen 16:9</string>
    <string name="pref_camera_picturesize_entry_3200x2400">Standard 4:3</string>
    <string name="pref_camera_picturesize_entry_3200x1800">Full screen 16:9</string>
    <string name="pref_camera_picturesize_entry_1920x1080">2M Pixels</string>
    <string name="pref_camera_picturesize_entry_1280x720">0.9M Pixels</string>
    <string name="pref_camera_picturesize_professional_entry_4208x3120">13M(4208x3120)</string>
    <string name="pref_camera_picturesize_professional_entry_4208x2368">10M(4208x2368)</string>
    <string name="pref_camera_picturesize_professional_entry_3200x2400">8M(3264X2448)</string>
    <string name="pref_camera_picturesize_professional_entry_3200x1800">6M(3264x1840)</string>
    <string name="pref_camera_picturesize_professional_entry_3264x1836">6M(3264x1836)</string>
    <string name="pref_camera_picturesize_professional_entry_2592x1944">5M(2592x1944)</string>
    <string name="pref_camera_picturesize_professional_entry_2048x1536">3M(2048x1536)</string>
    <string name="pref_camera_picturesize_professional_entry_1920x1080">2M(1920x1088)</string>
    <string name="pref_camera_picturesize_professional_entry_1600x1200">2M(1600x1200)</string>
    <string name="pref_camera_picturesize_professional_entry_1280x720">0.9M(1280x720)</string>
    <string name="pref_camera_picturesize_professional_entry_1024x768">0.8M(1024x768)</string>
    <string name="pref_camera_jpegquality_default">fine</string>
    <string name="pref_camera_picture_size_default">3264x1840</string>
    <string name="pref_camera_front_picture_size_default">1920x1088</string>
    <string name="pref_camera_picture_format_default">jpeg</string>
    <string name="pref_camera_picture_format_title">Select picture format</string>
    <string name="pref_camera_picture_format_entry_jpeg">Jpeg</string>
    <string name="pref_camera_picture_format_entry_raw">Raw</string>
    <string name="pref_camera_picture_format_value_jpeg">jpeg</string>
    <string name="pref_camera_picture_format_value_raw">raw</string>
    <string name="pref_camera_jpegquality_title">Picture quality</string>
    <string name="pref_camera_jpegquality_entry_superfine">Super fine</string>
    <string name="pref_camera_jpegquality_entry_fine">Fine</string>
    <string name="pref_camera_jpegquality_entry_normal">Standard</string>
    <string name="pref_camera_histogram_default">disable</string>
    <string name="pref_camera_histogram_title">Histogram</string>
    <string name="pref_camera_histogram_entry_enable">Enable</string>
    <string name="pref_camera_histogram_entry_disable">Disable</string>
    <string name="pref_camera_histogram_value_enable">enable</string>
    <string name="pref_camera_histogram_value_disable">disable</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">Auto</string>
    <string name="pref_camera_focusmode_entry_normal">Standard</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_camera_focusmode_entry_continuous">CAF</string>
    <string name="pref_camera_focusmode_value_default">auto</string>
    <string name="pref_camera_flashmode_default">auto</string>
    <string name="pref_camera_skin_beautify_default">off</string>
    <string name="pref_camera_flashmode_no_flash">no_flash</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_flashmode_entry_auto">Auto</string>
    <string name="pref_camera_flashmode_entry_on">On</string>
    <string name="pref_camera_flashmode_entry_off">Off</string>
    <string name="pref_camera_video_flashmode_default">off</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_whitebalance_k_value_title">White Balance K Value</string>
    <string name="pref_camera_whitebalance_entry_auto">Auto</string>
    <string name="pref_camera_whitebalance_entry_incandescent">Incandescent</string>
    <string name="pref_camera_whitebalance_entry_daylight">Daylight</string>
    <string name="pref_camera_whitebalance_entry_fluorescent">Fluorescent</string>
    <string name="pref_camera_whitebalance_entry_cloudy">Cloudy</string>
    <string name="pref_camera_whitebalance_entryvalue_auto">auto</string>
    <string name="pref_camera_whitebalance_entryvalue_incandescent">incandescent</string>
    <string name="pref_camera_whitebalance_entryvalue_daylight">daylight</string>
    <string name="pref_camera_whitebalance_entryvalue_fluorescent">fluorescent</string>
    <string name="pref_camera_whitebalance_entryvalue_cloudy">cloudy-daylight</string>
    <string name="pref_camera_coloreffect_default">none</string>
    <string name="pref_camera_coloreffect_title">Filters</string>
    <string name="pref_camera_coloreffect_entry_none">Standard</string>
    <string name="pref_camera_coloreffect_entry_mono">Mono</string>
    <string name="pref_camera_coloreffect_entry_sepia">Sepia</string>
    <string name="pref_camera_coloreffect_entry_negative">Negative</string>
    <string name="pref_camera_coloreffect_entry_posterize">Posterize</string>
    <string name="pref_camera_coloreffect_entry_aqua">Aqua</string>
    <string name="pref_camera_touchafaec_default">touch-on</string>
    <string name="pref_camera_touchafaec_title">Touch AF/AEC</string>
    <string name="pref_camera_touchafaec_entry_off">Off</string>
    <string name="pref_camera_touchafaec_entry_on">On</string>
    <string name="pref_camera_sharpness_entry_level0">Level 0</string>
    <string name="pref_camera_sharpness_entry_level1">Level 1</string>
    <string name="pref_camera_sharpness_entry_level2">Level 2 (default)</string>
    <string name="pref_camera_sharpness_entry_level3">Level 3</string>
    <string name="pref_camera_sharpness_entry_level4">Level 4</string>
    <string name="pref_camera_sharpness_entry_level5">Level 5</string>
    <string name="pref_camera_sharpness_entry_level6">Level 6</string>
    <string name="pref_camera_contrast_entry_level0">Level 0</string>
    <string name="pref_camera_contrast_entry_level1">Level 1</string>
    <string name="pref_camera_contrast_entry_level2">Level 2</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default">0</string>
</resources>